# energy_efficient_llm_usage

./: .gitignore  Benchmark.md  EXECUTION.md  INSTRUCTION_OLLAMA.md  README.md  benchmark.txt  machine-learing.json  pyproject.toml  software-engineering.json
config/: ollama.json
data/: sample_prompts.json
src/: README.md  __init__.py  baseline.py  baseline_cli.py  benchmark.py  benchmark_cli.py  compare_cli.py  constraints.py  pipeline.py  pipeline_cli.py  pipeline_fallback.py  text_utils.py
src/analyzer/: README.md  __init__.py  classifier.py  cli.py  intent_classifier.py  models.py  signals.py
src/decomposer/: __init__.py  decomposer.py  models.py
src/evaluation/: __init__.py  comparison.py  evaluator.py  models.py  quality_scorer.py
src/generator/: __init__.py  generator.py  models.py  policy_matrix.py  templates.py
src/llm/: __init__.py  config.py  models.py  ollama_client.py
src/monitoring/: __init__.py  energy.py  models.py  monitor.py
src/optimizer/: __init__.py  guardrails.py  llm_optimizer.py  models.py  optimizer.py  phrases.py  rules.py
src/validator/: __init__.py  models.py  validator.py
tests/: test_baseline_cli.py  test_benchmark_prompts.py  test_complexity_analyzer.py  test_generator.py  test_llm.py  test_monitoring_evaluation.py  test_optimizer.py  test_quality_improvements.py  test_query_type_benchmark.py  test_semantic_pipeline.py
