[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "energy-efficient-llm-usage"
version = "0.1.0"
description = "Prototype system for energy-aware LLM prompt optimization"
readme = "README.md"
requires-python = ">=3.10"

[project.scripts]
analyze-complexity = "src.analyzer.cli:main"
optimize-prompt = "src.pipeline_cli:main"
call-baseline = "src.baseline_cli:main"
compare-outputs = "src.compare_cli:main"
run-benchmark = "src.benchmark_cli:main"

[project.optional-dependencies]
monitoring = ["psutil>=5.9"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
markers = [
    "integration: live Ollama integration tests",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]
